# routes/index.js
@@ -1,8 +1,22 @@
+const passport = require('passport');
 const router = require('express').Router();
 
 router.use('/', require('./swagger'));
 
 router.use('/movies', require('./movies'));
 router.use('/genres', require('./genres'));
+
+
+router.get('/login', passport.authenticate('github'), (req, res) => {});
+
+router.get('/github/callback', passport.authenticate('github',
+  { failureRedirect: '/api-docs', session: false }), (req, res) => {});
+
+router.get('/logout', function(req, res, next) {
+  req.logout(function (err) {
+    if(err) { return next(err); }
+    res.redirect('/');
+  });
+});
 
 module.exports = router;
